# rag-practice

./: HOMEWORK.md  Makefile  README.md  main.py  pyproject.toml  ruff.toml
clients/: __init__.py  llm.py  rag.py
documents/: boiling_point.txt  exhibitions_may_2025.txt  faithful_dog_histories.txt  high_voltage_transmission.txt  tokyo_weather.txt
output20250504175331/: 2025年5月5日の東京の天気は?_output.txt  2025年5月5日の東京の天気は?_with_reference_output.txt  2025年5月、東京都内で開催中の展覧会は?_output.txt  2025年5月、東京都内で開催中の展覧会は?_with_reference_output.txt  all_responses.txt  ハチ公はどこで待ち続けた?_output.txt  ハチ公はどこで待ち続けた?_with_reference_output.txt  水の沸点は?_output.txt  水の沸点は?_with_reference_output.txt  電気はなぜ高圧で送るの?_output.txt  電気はなぜ高圧で送るの?_with_reference_output.txt
settings/: __init__.py  pipe.py
